frontend/test/should_fail/index_exec_loop_node_fromIndexSame_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	for{n:Node in nodesFromIndexSame(j, j); true }
}